# akermu-xmonad

./: .gitignore  Makefile  README.md  akermu-xmonad.cabal  stack.yaml
src/: xmobar.hs  xmonad.hs
src/XMonad/Prompt/: AppPrompt.hs  Common.hs  NetworkPrompt.hs  PassPrompt.hs  VpnPrompt.hs
