name:                akermu-xmonad
version:             0.0.1
synopsis:            My Xmonad configuration.
description:         My Xmonad configuration.   
license:             GPL-3
license-file:        LICENCE
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10

executable akermu-xmonad
  main-is:             xmonad.hs
  build-depends:       base >=4.8
                     , containers >= 0.5.6.2
                     , directory >=1.2 && <1.3
                     , filepath >=1.4 && <1.5
                     , xmonad >=0.12 && <0.13
                     , xmonad-contrib >=0.12 && <0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
